--- a/golden-manager-front/package.json
+++ b/golden-manager-front/package.json
@@ -14,6 +14,6 @@
     "react-dom": "latest",
     "react-to-pdf": "^0.0.13",
     "reactstrap": "latest",
-    "swr": "^0.4.1"
+    "swr": "latest"
   }
 }
